build(gradle): migrate formatting checks to Gradle
Reproduce Maven's Spotless formatting under Gradle at parity — the eighth build stage of the Maven-to-Gradle migration. Maven's spotless-maven-plugin stays in place and keeps working until the final removal subtask.

- Wire the com.diffplug.spotless plugin (catalog version 8.8.0 + marker library + build-logic classpath) and apply it in asapp.java-conventions across all 7 modules
- Mirror Maven's Java steps in the spotless block: Eclipse 4.35 + asapp_formatter.xml, the five-group import order, license header, and UNIX line endings, with both config files anchored via rootProject.file
- Pin the license-header delimiter explicitly to "package " so parity with Maven's delimiter is literal, not reliant on Spotless's broader built-in default
- Switch remove-unused-imports to the cleanthat engine so the step needs no daemon-wide --add-exports on Java 25
- Keep spotlessCheck on the check path (faithful to Maven's ci-profile intent); spotlessApply replaces mvn spotless:apply
- Document the Formatting conventions and the ./gradlew build -x spotlessCheck local opt-out in the Gradle rules
- Check off the formatting subtask and groom later migration subtask notes in TODO.md